tests/snapshots/render_golden__exclusions_prune_whole_subtrees@grpc.request.snap
---
source: tests/render_golden.rs
description: hog --color never --timezone utc -e grpc.request
input_file: tests/corpus/exclude.jsonl
---
[INF] rpc done grpc.code=OK grpc.time_ms=1.5 grpcStatus=2 grpc_id=9
code=1 grpc.code=2
serviceName=api span.id=s1 span.kind=server trace_id=abc
a=1
